--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,6 +9,7 @@ check_PROGRAMS += test4
 check_PROGRAMS += testReplaceExisting
 check_PROGRAMS += test_parse_int64
 check_PROGRAMS += test_null
+check_PROGRAMS += test_null_end
 check_PROGRAMS += test_cast
 check_PROGRAMS += test_parse
 check_PROGRAMS += test_locale
@@ -33,13 +34,15 @@ test_parse_int64_LDADD = $(LIBJSON_LA)
 
 test_null_LDADD = $(LIBJSON_LA)
 
+test_null_end_LDADD = $(LIBJSON_LA)
+
 test_cast_LDADD = $(LIBJSON_LA)
 
 test_parse_LDADD = $(LIBJSON_LA)
 
 test_locale_LDADD = $(LIBJSON_LA)
 
-TESTS = test1.test test2.test test4.test testReplaceExisting.test parse_int64.test test_null.test test_cast.test test_parse.test test_locale.test
+TESTS = test1.test test2.test test4.test testReplaceExisting.test parse_int64.test test_null.test test_null_end.test test_cast.test test_parse.test test_locale.test
 
 TESTS+= test_printbuf.test
 check_PROGRAMS+=test_printbuf
