--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -11,6 +11,7 @@ TESTS+= test4.test
 TESTS+= testReplaceExisting.test
 TESTS+= test_parse_int64.test
 TESTS+= test_null.test
+TESTS+= test_null_end.test
 TESTS+= test_cast.test
 TESTS+= test_parse.test
 TESTS+= test_locale.test
